fix whitespace on technique-list

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -221,3 +221,7 @@ p.note {
 .lvl.lvl-5 {
     background-position: 0px -66px;
 }
+
+.technique-icon-list.item-complex.item-icon-left .item-content {
+    padding-left: 125px;
+}
